<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VuzZz Nantes</string>
<!--     <string name="app_name">VuzZz Paris</string> -->

    <string name="my_position">Ma position</string>
    <string name="enter_address">Entrez une adresse</string>
    <string name="settings_title">Paramètres</string>
    <string name="rating_title">Évaluation</string>
    <string name="rating_details_title">Détails</string>
    <string name="history_title">Historique</string>
    <string name="searching_location">Géolocalisation en cours</string>
    <string name="culture_theme_weight">Culture</string>
    <string name="institutions_theme_weight">Sécurité</string>
    <string name="leisure_theme_weight">Loisirs</string>
    <string name="nature_theme_weight">Nature</string>
    <string name="shops_theme_weight">Commerces</string>
    <string name="transit_theme_weight">Transport</string>
    <string name="loading">"Chargement en cours&#8230;"</string>
    <string name="cancel">Annuler</string>
    <string name="retry">Réessayer</string>
    <string name="downloading_error_title">Erreur</string>
    <string name="error_information_message">Les informations n\'ont pu être téléchargées</string>
    <string name="share_with">Partager via</string>
    <string name="about_content" formatted="false" >"<![CDATA[N'hésitez pas à nous aider en nous donnant une (bonne) note sur l'<b>Android Market</b>, et en <b>partageant</b> l'application avec vos amis.<br /><br />Pour en savoir plus : <b><a href="http://www.vuzzz.com">VuzZz.com</a></b>.]]>"</string>
    <string name="about_ok">Cool !</string>
    <string name="rate_android_market">Market</string>
    <string name="share_project">Partager</string>
    <string name="share_project_content">"Tu connais VuzZz ? Génial pour connaître la qualité de vie d'un lieu ! Et c'est dispo sur mobile : http://www.vuzzz.com"</string>
 	<string name="note_max">/10</string>
 	<string name="search_address">"&#8220;Bouffay&#8221;"</string>
<!--  	<string name="search_address">"&#8220;Place d'italie&#8221;"</string> -->
 	<string name="vuzzz_help_mui">"<![CDATA[<b>VuzZz</b> est disponible sur l'<b>Android Market</b><br /><font color="#33B5E5">http://<b>goo.gl/V5mtG</b></font><br /><br />Plus d'informations sur <b><font color="#33B5E5">vuzzz.com</font></b>]]>"</string>
 	<string name="vuzzzCommon">"<![CDATA[Les notes attribuées dépendent de la <b>couverture des données</b> mises à disposition par différents organismes tels que la <b>Mairie de Paris</b> ou la <b>Ville de Nantes</b>, dans le cadre de leur politique <b>Open Data</b>.<br /><br /><b>VuzZz</b> est une application créée initialement en 48h par <b>Pierre-Yves Ricau</b>, <b>Romain Sertelon</b>, <b>Alexandre Thomas</b> et <b>Joan Zapata</b> lors du Global Android DevCamp 2012.]]>"</string>
 	<string name="about_vuzzz">À propos</string>
 	<string name="nc">N/C</string>

</resources>