<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:shadowColor="#44000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1.5"
            android:text="@string/about_vuzzz"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/commonHelpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:textSize="18dp" />

        <RelativeLayout
            android:id="@+id/helpContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/shareButtons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:weightSum="2" >

                <Button
                    android:id="@+id/shareVuzzButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_default_holo_light"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/share_project"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/androidMarketButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_default_holo_light"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/rate_android_market"
                    android:textSize="18dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/helpText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/shareButtons"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:textSize="18dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/helpMuiContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/helpMuiText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:textSize="18dp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="QRCode de l&apos;URL de VuzZz sur l&apos;Android Market"
                android:paddingBottom="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/share_vuzzz" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>